--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
+        "php": "^7.3",
         "symfony/mailer": "^5.0",
         "symfony/console": "^5.0",
         "twig/twig": "^3.0",
